# py-typecheck

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
github/workflows/: ci.yml  release.yml
src/py_typecheck/: __init__.py  core.py
tests/: test_core.py  test_dict.py  test_list.py  test_set.py  test_tuple.py  test_union.py
